fix for bug 142629 - [win32 only] recursive copy / move errors are not properly bubbled up, r=dougt, sr=sspitzer